# functions-multiple-endpoints

./: LICENSE  README.md  pyproject.toml  setup.cfg
.github/workflows/: python-publish.yml
examples/blueprint/: Dockerfile  README.md  main.py
examples/blueprint/src/: __init__.py  user.py
examples/onefile/: main.py
functions_wrapper/: __init__.py
