[metadata]
license_file = LICENSE
name = functions_wrapper
version = 1.0.1
author = av1m
author_email = a@avim.eu
description = Run multiple endpoints on Google Cloud Functions and Amazon Lambda
long_description = file:README.md
long_description_content_type = text/markdown
url = https://github.com/av1m/functions-multiple-endpoints
project_urls =
    Source = https://github.com/av1m/functions-multiple-endpoints
    Bug Tracker = https://github.com/av1m/functions-multiple-endpoints/issues
classifiers =
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = functions_wrapper
python_requires = >=3.6

[options.packages.find]
where = functions_wrapper